[project]
name = "api-testing-project"
version = "0.1.0"
description = "API tests for Practice ExpandTesting API"
authors = [{name = "Tester", email = "tester@example.com"}]
requires-python = ">=3.13"

dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "pydantic[email]>=2.0.0",
    "allure-pytest>=2.13.0",
    "python-dotenv>=1.0.0",
    "pysonar>=1.2.1.3951",
    "faker>=38.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".venv/.cache/pytest_cache"
addopts = [
    "-v",
    "-ra",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cache-clear",
    "--showlocals",
    "--full-trace",
    # "--setup-show",
    # "--alluredir=allure-results"
]
markers = [
    "smoke: marks tests as smoke tests",
    "regression: marks tests as regression tests",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_any_generics = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
cache_dir = ".venv/.cache/mypy_cache"
exclude = ["^\\.venv/"]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["src"]

[tool.ruff.lint]
preview = true
select = [
    "UP",  # pyupgrade
    "I",  # isort
    "E",  # flake8-errors
    # "E4",  # pycodestyle multiple-imports errors
    # "E7",  # pycodestyle errors
    # "E902",  # pycodestyle io-error
    "F",  # Pyflakes warnings
    "W",  # flake8-warnings
    "F",  # flake8-pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
    "T10",  # flake8-debugger
    "PT",  # flake8-pytest-style
    "RUF",  # Ruff
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate
    "FURB",  # refurb
]
ignore = [
    "C408",  # Unnecessary {kind}() call (rewrite as a literal)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "RUF001",  # String contains ambiguous {}. Did you mean {}?
    "RUF002",  # Docstring contains ambiguous {}. Did you mean {}?
    "RUF003",  # Comment contains ambiguous {}. Did you mean {}?
    "S110",  # try-except-pass detected, consider logging the exception
    "E501",  # Line too long ({width} > {limit})
    "S101",  # Use of assert detected
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests/**",
]
fixable = [
    "I",  # Import sorting
    "I",  # Import sorting
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
