[project]
name = "api-testing-project"
version = "0.1.0"
description = "API tests for Practice ExpandTesting API"
authors = [{name = "Tester", email = "tester@example.com"}]
requires-python = ">=3.13"

dependencies = [
    "requests >= 2.33.1",
    "types-requests >= 2.33.0.20260503",
    "pytest>=9.0.3",
    "pydantic[email]>=2.13.3",
    "allure-pytest>=2.16.0",
    "python-dotenv>=1.2.2",
    "pysonar>=1.4.0.4676",
    "faker>=40.15.0",
    "allure-python-commons>=2.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".venv/.cache/pytest_cache"
addopts = [
    "-v",
    "-ra",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cache-clear",
    "--showlocals",
]
markers = [
    "smoke: marks tests as smoke tests",
    "regression: marks tests as regression tests",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_any_generics = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
cache_dir = ".venv/.cache/mypy_cache"
exclude = ["^\\.venv/"]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["src"]

[tool.ruff.lint]
preview = true
select = [
    "UP",
    "I",
    "E",
    "F",
    "W",
    "F",
    "B",
    "C4",
    "S",
    "BLE",
    "T20",
    "T10",
    "PT",
    "RUF",
    "DTZ",
    "ERA",
    "FURB",
]
ignore = [
    "C408",
    "D100",
    "D101",
    "D102",
    "D103",
    "RUF001",
    "RUF002",
    "RUF003",
    "S110",
    "E501",
    "S101",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests/**",
]
fixable = [
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
